--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,16 +1,33 @@
 <div class="users-container">
   <div class="users-header">Users Management Dashboard</div>
 
-  <div class="users-actions">
+  <div class="error-msg" *ngIf="isError">Something went wrong!</div>
+
+  <div class="users-actions" *ngIf="!isError">
     <div class="users-info">
-      <div class="users-info-heading">Users</div>
-      <div class="users-info-count">You have {{ dataSource.length }} users</div>
+      <div class="users-info-loader" *ngIf="isLoading">
+        <ngx-skeleton-loader
+          [appearance]="'line'"
+          [theme]="{ height: '50px', background: 'rgb(240, 240, 240)' }"
+        ></ngx-skeleton-loader>
+      </div>
+
+      <div class="users-info-content" *ngIf="!isLoading">
+        <div class="users-info-heading">Users</div>
+        <div class="users-info-count">
+          You have {{ dataSource.data.length }} users
+        </div>
+      </div>
     </div>
 
     <div class="users-actions-main">
       <div class="users-actions-main-search">
         <mat-icon class="search-icon">search</mat-icon>
-        <input type="text" placeholder="search users" />
+        <input
+          type="text"
+          (keyup)="onFilter($event)"
+          placeholder="search users"
+        />
       </div>
       <div class="users-actions-main-btn">
         <button (click)="onAddUser()">Add user</button>
@@ -18,39 +35,76 @@
     </div>
   </div>
 
-  <table mat-table [dataSource]="dataSource" class="users-table">
-    <ng-container matColumnDef="s/n">
-      <th mat-header-cell *matHeaderCellDef>S/N.</th>
-      <td mat-cell *matCellDef="let i = index">{{ i + 1 }}</td>
-    </ng-container>
+  <div class="table-container" *ngIf="!isError">
+    <table mat-table [dataSource]="dataSource" class="users-table">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let user">{{ user.name }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let user">{{ user.name }}</td>
-    </ng-container>
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let user">
+          {{ user.email }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>Email</th>
-      <td mat-cell *matCellDef="let user">{{ user.email }}</td>
-    </ng-container>
+      <ng-container matColumnDef="roles">
+        <th mat-header-cell *matHeaderCellDef>Roles</th>
+        <td
+          mat-cell
+          *matCellDef="let user"
+          (click)="onViewRoles(user.roles)"
+          class="roles"
+        >
+          <div class="roles-main">
+            <div
+              class="another-roles"
+              [matMenuTriggerFor]="roles_menu"
+              matTooltip="Click to view roles"
+            >
+              {{ user.roles }}
+            </div>
+          </div>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="roles">
-      <th mat-header-cell *matHeaderCellDef>Roles</th>
-      <td mat-cell *matCellDef="let user">{{ user.roles }}</td>
-    </ng-container>
+      <ng-container matColumnDef="icon">
+        <th mat-header-cell *matHeaderCellDef aria-label="row actions">
+          &nbsp;
+        </th>
+        <td mat-cell *matCellDef="let i = index">
+          <div
+            class="menu-btn"
+            [matMenuTriggerFor]="menu"
+            (click)="onGetUser(i)"
+          >
+            <i class="fa fa-ellipsis-vertical"></i>
+          </div>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="icon">
-      <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
-      <td mat-cell *matCellDef="let i = index">
-        <div class="menu-btn" [matMenuTriggerFor]="menu" (click)="onGetUser(i)">
-          <i class="fa fa-ellipsis-vertical"></i>
-        </div>
-      </td>
-    </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+    <mat-paginator
+      [pageSizeOptions]="[5, 7, 20]"
+      showFirstLastButtons
+      aria-label="Select page of periodic elements"
+      *ngIf="!isLoading"
+    >
+    </mat-paginator>
+  </div>
+
+  <div class="item" *ngIf="isLoading">
+    <ngx-skeleton-loader
+      [appearance]="'line'"
+      [count]="dataCount"
+      [theme]="{ height: '50px', background: 'rgb(240, 240, 240)' }"
+    ></ngx-skeleton-loader>
+  </div>
+
   <mat-menu #menu="matMenu">
     <div class="menu-container">
       <button mat-menu-item class="edit-user-btn" (click)="onEditUser()">
@@ -59,6 +113,14 @@
       <button mat-menu-item class="delete-user-btn" (click)="onDeleteUser()">
         Delete user
       </button>
+    </div>
+  </mat-menu>
+
+  <mat-menu #roles_menu="matMenu">
+    <div class="role-menu-container" *ngFor="let role of userRoles">
+      <ul>
+        <li>{{ role }}</li>
+      </ul>
     </div>
   </mat-menu>
 </div>
