--- a/src/app/components/user-dialog/user-dialog.component.scss
+++ b/src/app/components/user-dialog/user-dialog.component.scss
@@ -1,16 +1,33 @@
 @import "config";
 
 .user-dialog-container {
+  position: relative;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px 0;
+  overflow: hidden;
+  background-color: $white;
+}
+
+.submit-error {
+  top: 0px;
+  position: absolute;
+  padding: 12px 10px;
+  color: white;
+  background-color: red;
+  transform: translateY(-120px);
+  transition: all 200ms;
+
+  &.show {
+    transform: translateY(0px);
+  }
 }
 
 .user-form {
   width: 70%;
+  padding: 30px 0;
 
   &-heading {
     font-weight: 600;
