--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -35,64 +35,70 @@
     </div>
   </div>
 
+  <div class="zero-users" *ngIf="dataSource.data.length == 0 && !isLoading">
+    No users in your team yet. Add user
+  </div>
+
   <div class="table-container" *ngIf="!isError">
-    <table mat-table [dataSource]="dataSource" class="users-table">
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let user">{{ user.name }}</td>
-      </ng-container>
+    <div class="table-main" *ngIf="dataSource.data.length > 0">
+      <table mat-table [dataSource]="dataSource" class="users-table">
+        <ng-container matColumnDef="name" sticky>
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let user">{{ user.name }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let user">
-          {{ user.email }}
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef>Email</th>
+          <td mat-cell *matCellDef="let user">
+            {{ user.email }}
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="roles">
-        <th mat-header-cell *matHeaderCellDef>Roles</th>
-        <td
-          mat-cell
-          *matCellDef="let user"
-          (click)="onViewRoles(user.roles)"
-          class="roles"
-        >
-          <div class="roles-main">
-            <div
-              class="another-roles"
-              [matMenuTriggerFor]="roles_menu"
-              matTooltip="Click to view roles"
-            >
-              {{ user.roles }}
-            </div>
-          </div>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="icon">
-        <th mat-header-cell *matHeaderCellDef aria-label="row actions">
-          &nbsp;
-        </th>
-        <td mat-cell *matCellDef="let i = index">
-          <div
-            class="menu-btn"
-            [matMenuTriggerFor]="menu"
-            (click)="onGetUser(i)"
+        <ng-container matColumnDef="roles">
+          <th mat-header-cell *matHeaderCellDef>Roles</th>
+          <td
+            mat-cell
+            *matCellDef="let user"
+            (click)="onViewRoles(user.roles)"
+            class="roles"
           >
-            <i class="fa fa-ellipsis-vertical"></i>
-          </div>
-        </td>
-      </ng-container>
+            <div class="roles-main">
+              <div
+                class="another-roles"
+                [matMenuTriggerFor]="roles_menu"
+                matTooltip="Click to view roles"
+              >
+                {{ user.roles }}
+              </div>
+            </div>
+          </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
+        <ng-container matColumnDef="icon">
+          <th mat-header-cell *matHeaderCellDef aria-label="row actions">
+            &nbsp;
+          </th>
+          <td mat-cell *matCellDef="let i = index">
+            <div
+              class="menu-btn"
+              [matMenuTriggerFor]="menu"
+              (click)="onGetUser(i)"
+            >
+              <i class="fa fa-ellipsis-vertical"></i>
+            </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
 
     <mat-paginator
       [pageSizeOptions]="[5, 7, 20]"
       showFirstLastButtons
       aria-label="Select page of periodic elements"
-      *ngIf="!isLoading"
+      *ngIf="dataSource.data.length > 0 && !isLoading"
     >
     </mat-paginator>
   </div>
