--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,11 @@ body {
   margin: 0;
   font-family: "Roboto", sans-serif;
 }
+
+.users_dialog {
+  & .mat-dialog-container {
+    padding: 0;
+    background-color: var(--dialogBg);
+    width: 600px;
+  }
+}
