--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -35,98 +35,14 @@
     </div>
   </div>
 
-  <div class="zero-users" *ngIf="dataSource.data.length == 0 && !isLoading">
+  <div
+    class="zero-users"
+    *ngIf="dataSource.data.length == 0 && !isLoading && !isError"
+  >
     No users in your team yet. Add user
   </div>
 
   <div class="table-container" *ngIf="!isError">
-    <div class="table-main" *ngIf="dataSource.data.length > 0">
-      <table mat-table [dataSource]="dataSource" class="users-table">
-        <ng-container matColumnDef="name" sticky>
-          <th mat-header-cell *matHeaderCellDef>Name</th>
-          <td mat-cell *matCellDef="let user">{{ user.name }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef>Email</th>
-          <td mat-cell *matCellDef="let user">
-            {{ user.email }}
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="roles">
-          <th mat-header-cell *matHeaderCellDef>Roles</th>
-          <td
-            mat-cell
-            *matCellDef="let user"
-            (click)="onViewRoles(user.roles)"
-            class="roles"
-          >
-            <div class="roles-main">
-              <div
-                class="another-roles"
-                [matMenuTriggerFor]="roles_menu"
-                matTooltip="Click to view roles"
-              >
-                {{ user.roles }}
-              </div>
-            </div>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="icon">
-          <th mat-header-cell *matHeaderCellDef aria-label="row actions">
-            &nbsp;
-          </th>
-          <td mat-cell *matCellDef="let i = index">
-            <div
-              class="menu-btn"
-              [matMenuTriggerFor]="menu"
-              (click)="onGetUser(i)"
-            >
-              <i class="fa fa-ellipsis-vertical"></i>
-            </div>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-    </div>
-
-    <mat-paginator
-      [pageSizeOptions]="[5, 7, 20]"
-      showFirstLastButtons
-      aria-label="Select page of periodic elements"
-      *ngIf="dataSource.data.length > 0 && !isLoading"
-    >
-    </mat-paginator>
+    <app-users-table [dataSource]="dataSource"></app-users-table>
   </div>
-
-  <div class="item" *ngIf="isLoading">
-    <ngx-skeleton-loader
-      [appearance]="'line'"
-      [count]="dataCount"
-      [theme]="{ height: '50px', background: 'rgb(240, 240, 240)' }"
-    ></ngx-skeleton-loader>
-  </div>
-
-  <mat-menu #menu="matMenu">
-    <div class="menu-container">
-      <button mat-menu-item class="edit-user-btn" (click)="onEditUser()">
-        Edit user
-      </button>
-      <button mat-menu-item class="delete-user-btn" (click)="onDeleteUser()">
-        Delete user
-      </button>
-    </div>
-  </mat-menu>
-
-  <mat-menu #roles_menu="matMenu">
-    <div class="role-menu-container" *ngFor="let role of userRoles">
-      <ul>
-        <li>{{ role }}</li>
-      </ul>
-    </div>
-  </mat-menu>
 </div>
