--- a/src/app/components/user-dialog/user-dialog.component.scss
+++ b/src/app/components/user-dialog/user-dialog.component.scss
@@ -92,6 +92,11 @@ form {
     color: $white;
     font-size: 1rem;
     cursor: pointer;
+
+    &.invalid {
+      background-color: $sec-color;
+      cursor: not-allowed;
+    }
   }
 }
 
