--- a/src/app/components/user-dialog/user-dialog.component.html
+++ b/src/app/components/user-dialog/user-dialog.component.html
@@ -1,7 +1,4 @@
 <div class="user-dialog-container">
-  <div class="submit-error" [ngClass]="{ show: isInvalid }">
-    Fields cannot be empty
-  </div>
   <div class="user-form">
     <div class="user-form-heading">Add User</div>
     <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
@@ -30,15 +27,14 @@
             'input-error': email.touched && email.invalid
           }"
         />
-        <p class="error name-error" *ngIf="email.touched && email.invalid">
-          Email cannot be empty
+        <p class="error email-error" *ngIf="email.touched && email.invalid">
+          Email is invalid
         </p>
       </div>
 
       <div class="form-group">
         <label for="name">Role(s)</label>
         <mat-form-field>
-          <!-- <mat-label>Toppings</mat-label> -->
           <mat-select formControlName="roles" multiple>
             <mat-select-trigger>
               <span class="example-additional-selection">
@@ -53,7 +49,7 @@
       </div>
 
       <div class="form-actions">
-        <button type="submit">
+        <button type="submit" [ngClass]="{ invalid: userForm.invalid }">
           <span class="btn-texts" *ngIf="!isLoading">
             {{ isEditing ? "Save changes" : "Add user" }}
           </span>
