--- a/src/app/components/users/users-table/users-table.component.html
+++ b/src/app/components/users/users-table/users-table.component.html
@@ -2,7 +2,9 @@
   <table mat-table [dataSource]="dataSource" class="users-table">
     <ng-container matColumnDef="name" sticky>
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let user">{{ user.name }}</td>
+      <td mat-cell *matCellDef="let user">
+        {{ user.name }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="email">
