--- a/src/app/components/users/users.component.scss
+++ b/src/app/components/users/users.component.scss
@@ -104,6 +104,28 @@
   margin-top: 30px;
 }
 
+.delete-users {
+  height: 34px;
+  & button {
+    height: 100%;
+    display: inline-block;
+    border: none;
+    padding: 10px 20px;
+    background-color: $main-color;
+    color: $white;
+    font-size: 1rem;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+    &:hover {
+      background-color: $sec-color;
+    }
+  }
+}
+
 @media (max-width: 520px) {
   .users-actions {
     flex-direction: column;
