--- a/src/app/components/user-dialog/user-dialog.component.html
+++ b/src/app/components/user-dialog/user-dialog.component.html
@@ -1,6 +1,8 @@
 <div class="user-dialog-container">
   <div class="user-form">
-    <div class="user-form-heading">Add User</div>
+    <div class="user-form-heading">
+      {{ isEditing ? "Edit user" : "Add user" }}
+    </div>
     <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="name">Name</label>
