--- a/src/app/components/users/users-table/users-table.component.html
+++ b/src/app/components/users/users-table/users-table.component.html
@@ -3,7 +3,9 @@
     <ng-container matColumnDef="name" sticky>
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let user">
-        {{ user.name }}
+        <span>
+          {{ user.name }}
+        </span>
       </td>
     </ng-container>
 
