--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,24 @@
+@use "@angular/material" as mat;
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+@include mat.core();
+
+$my-primary: mat.define-palette(mat.$indigo-palette, 500);
+$my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+$my-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $my-primary,
+      accent: $my-accent,
+    ),
+    density: 0,
+  )
+);
+
+// Emit theme-dependent styles for common features used across multiple components.
+@include mat.core-theme($my-theme);
+
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Roboto:wght@400;500;700;900&display=swap");
 
 html,
@@ -20,6 +41,6 @@ body {
   & .mat-dialog-container {
     padding: 0;
     background-color: var(--dialogBg);
-    width: 600px;
+    width: 60%;
   }
 }
