--- a/src/app/components/users/users-table/users-table.component.html
+++ b/src/app/components/users/users-table/users-table.component.html
@@ -82,7 +82,7 @@
 
 <mat-menu #roles_menu="matMenu">
   <div class="role-menu-container" *ngFor="let role of userRoles">
-    <ul>
+    <ul class="displayed-roles">
       <li>{{ role }}</li>
     </ul>
   </div>
